--- a/FactoryManagment/FactoryProject/FactoryProject/FactoryProject.csproj
+++ b/FactoryManagment/FactoryProject/FactoryProject/FactoryProject.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <ProjectReference Include="..\FactoryProject.Client\FactoryProject.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.15" />
   </ItemGroup>
