--- a/FactoryManagment/FactoryProject/FactoryProject/FactoryProject.csproj
+++ b/FactoryManagment/FactoryProject/FactoryProject/FactoryProject.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Components\Layout\AdminLayout.razor" />
+    <Content Remove="Components\Layout\EmptyLayout.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Components\Layout\AdminLayout.razor" />
+    <Compile Include="Components\Layout\EmptyLayout.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <ProjectReference Include="..\FactoryProject.Client\FactoryProject.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.15" />
