--- a/FactoryManagment/FactoryProject/FactoryProject/appsettings.json
+++ b/FactoryManagment/FactoryProject/FactoryProject/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "HttpsRedirection": {
+    "HttpsProt": 5023
+  },
   "ApiSettings": {
     "BaseUrl": "http://localhost:8080/"
     }
